src/test/ui/coherence/coherence-projection-uncovered-ty-4.stderr
error[E0210]: associated type `<T as Id>::Assoc` must be used as the type parameter for some local type (e.g., `MyStruct<<T as Id>::Assoc>`)
  --> $DIR/coherence-projection-uncovered-ty-4.rs:14:33
   |
LL | impl<T> Foreign<(), Vec<T>> for <T as Id>::Assoc {
   |                                 ^^^^^^^^^^^^^^^^ associated type `<T as Id>::Assoc` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0210`.
